# DataMuru

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  datamuru.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/workflows/: ci.yml  docs-links.yml  docs.yml  release.yml
datamuru/: __init__.py  api.py  bootstrap.py  edition.py  errors.py  modeling.py  types.py
datamuru/agile/: __init__.py  exporter.py
datamuru/cli/: guard.py  main.py  output.py
datamuru/core/: apply.py  config.py  engine.py  models.py  plan.py  schema.py  state.py
datamuru/enterprise/: __init__.py  activation.py  architecture.py  control_plane.py  evidence.py  fulfillment.py  handoff.py  registry.py
datamuru/governance/: masking.py  rbac.py  taxonomy.py
datamuru/providers/: base.py  factory.py
docs/: index.md  llms.txt
docs/architecture/: command-lifecycle.md  configuration-model.md  core-runtime.md  hosted-control-plane.md  library-architecture.md  overview.md  provider-model.md
docs/concepts/: configuration-hierarchy.md  how-datamuru-works.md  lifecycle-model.md  resources-and-addresses.md  safety-model.md  state-and-reconciliation.md
docs/contributing/: documentation-review-checklist.md  documentation-style-guide.md  index.md
docs/getting-started/: databricks-free-edition.md  evaluation-checklist.md  installation.md  overview.md  quickstart.md
docs/governance/: classification-and-masking.md  overview.md  rbac.md
docs/guides/: authentication.md  catalogs-and-schemas.md  configure-project.md  databricks-to-snowflake.md  destroy-resources.md  enterprise-activation.md  enterprise-project-structure.md  execution-modes.md  import-resources.md  oss-to-enterprise.md  permissions.md  plan-and-apply.md  saved-plans.md  snowflake-to-databricks.md  target-resources.md  troubleshooting.md  validate-and-doctor.md
docs/operations/: acl-guidelines.md  documentation-maintenance.md  enterprise-rollout-playbook.md  faq.md  milestone-0-4-test-runbook.md  milestone-0-5-test-runbook.md  production-readiness.md  publishing.md  security.md  support.md  team-adoption-guidelines.md  testing-and-release.md  upgrades.md  usage-guidelines.md
docs/product/: agile-github-projects.md  editions.md  enterprise-testing.md  github-project-board.md  milestone-runbooks.md  packaging-and-distribution.md  platform-overview.md  product-requirements-summary.md  roadmap.md
docs/reference/: ai-discovery.md  capabilities-limits.md  capabilities.md  cli.md  databricks-provider.md  environment-variables.md  (+10 more)
environments/: dev.yml
governance/: masking.yml  rbac.yml  taxonomy.yml
providers/: databricks.yml
schemas/: datamuru.schema.json  rbac.schema.json  taxonomy.schema.json  workspace.schema.json
tests/: conftest.py
workspaces/: alpha-dev.yml
(+91 files in other folders)
